packages/next-swc/crates/core/tests/errors/next-font-loaders/not-const/output.js
import inter1 from '@next/font/google?Inter;{"variant":"400"}';
import inter2 from '@next/font/google?Inter;{"variant":"400"}';
var i = 10;
var i2 = 20;
